tests/fixtures/valid/inline_dag_call_cross_file_indexed/src/lib/main.gcl
import lib.lib as lib;

param dist: Length[Region] = { Region.A: 1.0 m, Region.B: 2.0 m };
node picked: Length = @lib.doubler(v: @dist).result[Region.A];
