tests/fixtures/invalid/duplicate_match_arm.gcl
// Error: duplicate match arm
pub type Status {
    Nominal,
    Warning(code: Dimensionless),
}

param s: Status = Nominal;

node result: Dimensionless = match @s {
    Nominal => 0.0,
    Nominal => 1.0,
    Warning { code } => code,
};
